25thMay2026.txt
show databases
admin   40.00 KiB
config  12.00 KiB
local   80.00 KiB
show dbs
admin   40.00 KiB
config  12.00 KiB
local   80.00 KiB
use vit
switched to db vit
db
vit
db.dropDatabase()
{ ok: 1, dropped: 'vit' }
show dbs
admin   40.00 KiB
config  12.00 KiB
local   80.00 KiB
use vit
already on db vit
db.createCollection("Student")
{ ok: 1 }
show collections
Student
db.Student.drop()
true
show collections
db.createCollection("Employee")
{ ok: 1 }
show databases
admin   40.00 KiB
config  60.00 KiB
local   80.00 KiB
vit      8.00 KiB
show collections
Employee
db.Employee.insert((name:"jaya",department:"IT"))
SyntaxError: Unexpected token, expected "," (1:24)

> 1 | db.Employee.insert((name:"jaya",department:"IT"))
    |                         ^
db.Employee.insert({name:"jaya",department:"IT"})
DeprecationWarning: Collection.insert() is deprecated. Use insertOne, insertMany, or bulkWrite.
{
  acknowledged: true,
  insertedIds: {
    '0': ObjectId('6a1458499f9be9b78791931b')
  }
}
db.Employee.insert({name:"Ram",marks:90,department:"ECE"})
{
  acknowledged: true,
  insertedIds: {
    '0': ObjectId('6a1458699f9be9b78791931c')
  }
}
db.Employee.find()
{
  _id: ObjectId('6a1458499f9be9b78791931b'),
  name: 'jaya',
  department: 'IT'
}
{
  _id: ObjectId('6a1458699f9be9b78791931c'),
  name: 'Ram',
  marks: 90,
  department: 'ECE'
}